fix error with img align

--- a/style.css
+++ b/style.css
@@ -609,6 +609,8 @@ button{
   
   
   .picture_r{
+
+      float: right;
       max-width: 100%;
       margin-right: 15%;
       padding-left: 30px;
